--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ListViewPractive_20200711</string>
+    <string name="app_name">직방카피</string>
 </resources>
